# devop-templates

./: README.md
.pipelines/: pyproject.toml
django/gitlab/v1/: example.yml
django/v1/: template.yml
gitlab/common/v1/: common.yml
gitlab/django/v1/: README.md  example.yml  template.yml
gitlab/nuxt/v1/: README.md  example.yml  template.yml
