[tool.poetry]
name = "devops-template-validator"
version = "0.1.0"
description = ""
authors = ["Pan Teparak <panteparak@me.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"ruamel.yaml" = "^0.17.11"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
